bug: whitespace on right side of page

--- a/css/index.css
+++ b/css/index.css
@@ -5,7 +5,9 @@
     --black: #333333;
 }
 
-
+body{
+  overflow-x: hidden;
+}
 /* INFO SECTIONS: ACCOMMODATION, FACILITIES , etc */
 /* .link_container{
     background-color: #efefef;
